--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx cypress open --e2e --browser chrome"
+    "test": "npx cypress run --e2e --browser chrome"
   },
   "repository": {
     "type": "git",
