--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@cypress/grep": "^4.0.1",
     "cypress": "^13.6.1",
+    "jest": "^29.7.0",
     "mochawesome": "^7.1.3"
   }
 }
