--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -17,3 +17,31 @@ jobs:
         run: npm ci
       - name: Run unit tests
         run: npx jest
+  
+  prueba-linting-codeql:
+    name: analice
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        lenguages: ['javascript']
+
+      steps:
+        - name: Checkout
+        uses: actions/checkout@v4.1.1
+        - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: ${{ matrix.language }}
+        - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+        - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:${{matrix.language}}"
+
