--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -51,7 +51,7 @@ jobs:
   e2e:
     needs: [prueba-linting-codeql]
     runs-on: ubuntu-latest
-    enviroment: Testing
+    enviroments: Testing
 
     steps:
       - name: "Secrets and variables"
@@ -59,4 +59,4 @@ jobs:
           echo "variable $USER_TEST"
         env:
           USER_VAR: ${{ vars.USER_TEST }}
-          PASS_SECRET: ${{secret.TEST_SECRET}}
+          PASS_SECRET: ${{secrets.TEST_SECRET}}
