--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -60,3 +60,14 @@ jobs:
         env:
           USER_VAR: ${{ vars.USER_TEST }}
           PASS_SECRET: ${{secrets.TEST_SECRET}}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+      - name: Dependencies installing
+        run: npm ci
+      - name: Run unit tests
+        run: npx cypress run --e2e --browser chrome
+      - uses: actions/upload-artifact@v4.0.0
+        with:
+          name: mochawesome.html
+          path: ./reports/mochawesome.html
