--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/Ruben92D/jenkins-cypress#readme",
   "dependencies": {
     "@cypress/grep": "^4.0.1",
+    "body-parser": "^1.20.2",
     "cypress": "^13.6.1",
+    "express": "^4.18.2",
     "jest": "^29.7.0",
     "mochawesome": "^7.1.3"
   }
