--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -1,5 +1,11 @@
 name: Cypress Tests
-on: [push]
+on: 
+  workflow_dispatch:
+  push:
+    branches: "main"
+  pull_request:
+    branches: ["main"]
+
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
