--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -1,4 +1,5 @@
 name: Cypress Tests
+
 on:
   workflow_dispatch:
   push:
@@ -21,7 +22,8 @@ jobs:
       - name: Dependencies installing
         run: npm ci
       - name: Run unit tests
-        run: npx cypress run --e2e --browser chrome
+        run: |
+          npx cypress run --e2e --browser chrome
         record: true
         env:
           # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
