--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -27,3 +27,4 @@ jobs:
         env:
           # Creating a token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
