--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -1,4 +1,4 @@
-name: Cypress Tests
+name: Cypress unit test dashboard Tests
 
 on:
   workflow_dispatch:
@@ -8,23 +8,28 @@ on:
     branches: ["main"]
 
 jobs:
-  cypress-run:
+  prueba-unitaria:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        containers: [1, 2] # Uses 2 parallel instances
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
+        uses: actions/checkout@v4.1.1
       - name: Dependencies installing
         run: npm ci
       - name: Run unit tests
-        run: |
-          npx cypress run --e2e --browser chrome --record
-        env:
-          # Creating a token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+        run: npx jest
+
+  e2e:
+    runs-on: ubuntu-latest
+    env:
+      CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+      - name: Dependencies installing
+        run: npm ci
+      - name: Run Cypress tests
+        run: npx cypress run --record --key $CYPRESS_RECORD_KEY
+      - uses: actions/upload-artifact@v4.0.0
+        with:
+          name: mochawesome.html
+          path: ./reports/mochawesome.html
